--- a/l10n/po/ja_JP/_versions/main/guides/getting-started-testing.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/getting-started-testing.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-21 02:21+0000\n"
+"POT-Creation-Date: 2021-08-27 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2132,6 +2132,33 @@ msgid "IntelliJ JUnit template"
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/getting-started-testing.adoc:1237
+#: upstream/_versions/main/guides/getting-started-testing.adoc:1238
 msgid "Nothing needed in IntelliJ because the IDE will pick the `systemPropertyVariables` from the surefire plugin configuration in `pom.xml`."
 msgstr "IntelliJでは何も必要ありません。なぜなら、IDEは `systemPropertyVariables` を `pom.xml`のsurefireプラグイン設定から取得するからです。"
+
+#. type: Title ==
+#: upstream/_versions/main/guides/getting-started-testing.adoc:1239
+#, fuzzy, no-wrap
+#| msgid "Testing Security"
+msgid "Testing Dev Services"
+msgstr "セキュリティーのテスト"
+
+#. type: Plain text
+#: upstream/_versions/main/guides/getting-started-testing.adoc:1243
+msgid "By default tests should just work with link:dev-services[Dev Services], however from some use cases you may need access to the automatically configured properties in your tests."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/getting-started-testing.adoc:1248
+msgid "You can do this with `io.quarkus.test.common.DevServicesContext`, which can be injected directly into any `@QuarkusTest` or `@QuarkusIntegrationTest`. All you need to do is define a field of type `DevServicesContext` and it will be automatically injected. Using this you can retrieve any properties that have been set. Generally this is used to directly connect to a resource from the test itself, e.g. to connect to kafka to send messages to the application under test."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/getting-started-testing.adoc:1253
+msgid "Injection is also supported into objects that implement `io.quarkus.test.common.DevServicesContext.ContextAware`. If you have a field that implements `io.quarkus.test.common.DevServicesContext.ContextAware` Quarkus will call the `setIntegrationTestContext` method to pass the context into this object. This allows client logic to be encapsulated in a utility class."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/getting-started-testing.adoc:1256
+msgid "`QuarkusTestResourceLifecycleManager` implementations can also implement `ContextAware` to get access to these properties, which allows you to setup the resource before Quarkus starts (e.g. configure a KeyCloak instance, add data to a database etc)."
+msgstr ""
