--- a/l10n/po/ja_JP/_versions/main/guides/datasource.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/datasource.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-05 02:18+0000\n"
+"POT-Creation-Date: 2021-08-30 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -932,11 +932,16 @@ msgstr "それぞれが独自の設定を持っています。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/datasource.adoc:420
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "quarkus.datasource.db-kind=h2\n"
+#| "quarkus.datasource.username=username-default\n"
+#| "quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:default\n"
+#| "quarkus.datasource.jdbc.max-size=13\n"
 msgid ""
 "quarkus.datasource.db-kind=h2\n"
 "quarkus.datasource.username=username-default\n"
-"quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:default\n"
+"quarkus.datasource.jdbc.url=jdbc:h2:mem:default\n"
 "quarkus.datasource.jdbc.max-size=13\n"
 msgstr ""
 "quarkus.datasource.db-kind=h2\n"
@@ -946,11 +951,16 @@ msgstr ""
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/datasource.adoc:425
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "quarkus.datasource.users.db-kind=h2\n"
+#| "quarkus.datasource.users.username=username1\n"
+#| "quarkus.datasource.users.jdbc.url=jdbc:h2:tcp://localhost/mem:users\n"
+#| "quarkus.datasource.users.jdbc.max-size=11\n"
 msgid ""
 "quarkus.datasource.users.db-kind=h2\n"
 "quarkus.datasource.users.username=username1\n"
-"quarkus.datasource.users.jdbc.url=jdbc:h2:tcp://localhost/mem:users\n"
+"quarkus.datasource.users.jdbc.url=jdbc:h2:mem:users\n"
 "quarkus.datasource.users.jdbc.max-size=11\n"
 msgstr ""
 "quarkus.datasource.users.db-kind=h2\n"
@@ -960,11 +970,16 @@ msgstr ""
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/datasource.adoc:430
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "quarkus.datasource.inventory.db-kind=h2\n"
+#| "quarkus.datasource.inventory.username=username2\n"
+#| "quarkus.datasource.inventory.jdbc.url=jdbc:h2:tcp://localhost/mem:inventory\n"
+#| "quarkus.datasource.inventory.jdbc.max-size=12\n"
 msgid ""
 "quarkus.datasource.inventory.db-kind=h2\n"
 "quarkus.datasource.inventory.username=username2\n"
-"quarkus.datasource.inventory.jdbc.url=jdbc:h2:tcp://localhost/mem:inventory\n"
+"quarkus.datasource.inventory.jdbc.url=jdbc:h2:mem:inventory\n"
 "quarkus.datasource.inventory.jdbc.max-size=12\n"
 msgstr ""
 "quarkus.datasource.inventory.db-kind=h2\n"
@@ -1205,10 +1220,13 @@ msgstr "以下を使用して接続します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/datasource.adoc:555
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "quarkus.datasource.db-kind=h2\n"
+#| "quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:test\n"
 msgid ""
 "quarkus.datasource.db-kind=h2\n"
-"quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:test\n"
+"quarkus.datasource.jdbc.url=jdbc:h2:mem:test\n"
 msgstr ""
 "quarkus.datasource.db-kind=h2\n"
 "quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:test\n"
