--- a/l10n/po/ja_JP/_includes/homepage-extensions-band.html.po
+++ b/l10n/po/ja_JP/_includes/homepage-extensions-band.html.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-03-25 23:35+0900\n"
+"POT-Creation-Date: 2021-09-01 18:12+0000\n"
 "PO-Revision-Date: 2021-03-25 23:20+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -24,5 +24,7 @@ msgstr "各分野最高のライブラリと標準"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/homepage-extensions-band.html:7
-msgid "Quarkus provides a cohesive, fun to use, full-stack framework by leveraging a growing list of over fifty best-of-breed libraries that you love and use. All wired on a standard backbone. <a href=\"/vision/standards\">Learn more about Quarkus Extensions</a>."
+#, fuzzy
+#| msgid "Quarkus provides a cohesive, fun to use, full-stack framework by leveraging a growing list of over fifty best-of-breed libraries that you love and use. All wired on a standard backbone. <a href=\"/vision/standards\">Learn more about Quarkus Extensions</a>."
+msgid "Quarkus provides a cohesive, fun to use, full-stack framework by leveraging a growing list of hundreds of best-of-breed libraries that you love and use. All wired on a standard backbone. <a href=\"/vision/standards\">Learn more about Quarkus Extensions</a>."
 msgstr "Quarkusは50を超えて拡大している各分野における最高のライブラリを活用することで、良くまとまった、使って楽しいフルスタックフレームワークを提供します。全て、標準のバックボーンに接続されています。<a href=\"/vision/standards\">Quarkusエクステンションについて詳細はこちらをご覧ください</a>。"
