--- a/l10n/po/ja_JP/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-09-01 07:09+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-09-08 16:26+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.2.1.Final released - Hardening release'\n"
@@ -35,261 +35,230 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 2.2.1.Final released - Hardening release'\n"
+"title: 'Quarkus 2.2.1.Final リリース - ハードニングリリース'\n"
 "date: 2021-08-31\n"
 "tags: release\n"
-"synopsis: 2.2は初のハードニングリリースで、問題の修正、使い勝手やドキュメントの改善、全体的な磨き上げに専念した完全な開発サイクルです」と述べています。\n"
+"synopsis: 2.2は初のハードニングリリースで、開発サイクル全体を問題の修正、使い勝手やドキュメントの改善、全体的な磨き上げに専念しました。\n"
 "author: gsmet\n"
 "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:11
-#, fuzzy
 msgid "Today we announce the availability of Quarkus 2.2.1.Final, which is the result of our first hardening cycle."
-msgstr "本日、Quarkus 2.2.1.Finalがリリースされました。これは最初のハードニングサイクルの結果です。"
+msgstr "本日、Quarkus 2.2.1.Finalがリリースされました。これは最初のハードニングサイクルの成果です。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:13
-#, fuzzy
 msgid "Indeed, for 2.2, we decided to slow down on adding new features and focus this release cycle on hardening Quarkus with 3 main focuses:"
-msgstr "実際、2.2では新機能の追加を控え、今回のリリースサイクルではQuarkusの強化に3つの重点を置くことにしました。"
+msgstr "実際、2.2では新機能の追加を控え、今回のリリースサイクルではQuarkusの強化に次の3つの重点を置くことにしました:"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:15
-#, fuzzy
 msgid "Fix issues"
 msgstr "問題点の修正"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:16
-#, fuzzy
 msgid "Improve usability"
 msgstr "ユーザビリティの向上"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:17
-#, fuzzy
 msgid "Improve documentation"
 msgstr "ドキュメントの改善"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:19
-#, fuzzy
 msgid "Thus the list of noteworthy new features is a bit short for this release:"
 msgstr "そのため、今回のリリースでは注目すべき新機能のリストが少し足りません。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:21
-#, fuzzy
 msgid "Upgrade to GraalVM 21.2"
 msgstr "GraalVM 21.2へのアップグレード"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:22
-#, fuzzy
 msgid "Add global flag to disable Dev Services"
-msgstr "Devサービスを無効にするグローバル・フラグの追加"
+msgstr "Dev Servicesを無効にするグローバル・フラグの追加"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:23
-#, fuzzy
 msgid "Change the default thread model for RESTEasy Reactive"
 msgstr "RESTEasy Reactiveのデフォルトのスレッドモデルの変更"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:24
-#, fuzzy
 msgid "Introduce support for MongoDB service binding"
 msgstr "MongoDBサービスバインディングのサポートの導入"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:25
-#, fuzzy
 msgid "Extension for running Narayana LRA participants"
-msgstr "ナラヤナLRA参加者のランニング延長"
+msgstr "Narayana LRA参加者の実行エクステンション"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:27
-#, fuzzy
 msgid "but overall, this release comes with a lot of nice things so we strongly recommend you to upgrade."
 msgstr "しかし、全体的には、今回のリリースには多くの優れた機能が搭載されていますので、アップグレードされることを強くお勧めします。"
 
 #. type: Title ==
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:28
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Where is 2.2.0.Final?"
-msgstr "2.2.0.Finalはどこにありますか？"
+msgstr "2.2.0.Finalはどこに？"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:32
-#, fuzzy
 msgid "We only released the Core artifacts of 2.2.0.Final and not the full Platform release because this version suffered from a bug preventing dev mode to work on Windows (that's what you get for trying to fix another bug...).  Thus why we announce 2.2.1.Final directly."
-msgstr "2.2.0.FinalはWindowsでdevモードが動作しないというバグがあったため、Platformの完全版ではなくCoreの成果物のみをリリースしました（別のバグを修正しようとした結果です...）。そのため、2.2.1.Finalを直接発表しています。"
+msgstr "2.2.0.FinalはWindowsでdevモードが動作しないというバグがあったため、Platformの完全版ではなくCoreの成果物のみをリリースしました（別のバグを修正しようとした結果です...）。そのため、2.2.1.Finalを直接公開しています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:33
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Migration Guide"
-msgstr "マイグレーションガイド"
+msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:36
-#, fuzzy
 msgid "To migrate from 2.1, please refer to https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.2[our migration guide]."
 msgstr "2.1からの移行は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.2[移行ガイド]をご参照ください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:37
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "What's new?"
-msgstr "最新情報は？"
+msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:39
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "GraalVM 21.2"
 msgstr "GraalVM 21.2"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:42
-#, fuzzy
 msgid "The recommended version of GraalVM to use with Quarkus 2.2 is 21.2."
 msgstr "Quarkus 2.2で使用するGraalVMの推奨バージョンは21.2です。"
 
 #. type: Title ===
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:43
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Global flag to disable Dev Services"
-msgstr "Devサービスを無効にするグローバル・フラグ"
+msgstr "Dev Servicesを無効にするグローバル・フラグ"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:46
-#, fuzzy
 msgid "It is now possible to disable all the Dev Services at once with `quarkus.devservices.enabled=false`."
 msgstr "`quarkus.devservices.enabled=false` で、すべてのDevサービスを一度に無効にすることができるようになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:48
-#, fuzzy
 msgid "Also we centralized all the information about Dev Services in link:/guides/dev-services[one place]."
-msgstr "また、開発サービスに関する情報を link:/guides/dev-services[一]箇所にまとめました。"
+msgstr "また、Dev Servicesに関する情報を link:/guides/dev-services[一箇所]にまとめました。"
 
 #. type: Title ===
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:49
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Enhanced thread model for RESTEasy Reactive"
-msgstr "RESTEasy Reactiveの拡張スレッドモデル"
+msgstr "RESTEasy Reactiveの為の改良スレッドモデル"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:53
-#, fuzzy
 msgid "In short, RESTEasy Reactive is now smart enough to choose a blocking or non blocking thread model depending on the prototype of your REST methods, which should makes things easier when you are coming from RESTEasy Classic."
-msgstr "要するに、RESTEasy Reactiveは、RESTメソッドのプロトタイプに応じて、ブロッキングまたはノンブロッキングのスレッドモデルを選択することができるようになりましたので、RESTEasy Classicからの移行が容易になります。"
+msgstr "一言でいうと、RESTEasy Reactiveは、RESTメソッドのプロトタイプに応じて、ブロッキングまたはノンブロッキングのスレッドモデルを選択することができるようになりましたので、RESTEasy Classicからの移行が容易になります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:55
-#, fuzzy
 msgid "Clément Escoffier wrote a very comprehensive blog post about this enhancement that is very much worth reading: https://quarkus.io/blog/resteasy-reactive-smart-dispatch/[RESTEasy Reactive - To block or not to block]."
-msgstr "Clément Escoffier氏は、この機能拡張について非常に包括的なブログ記事を書いており、非常に読み応えがあります。 link:https://quarkus.io/blog/resteasy-reactive-smart-dispatch/[RESTEasy Reactive - To block or not to block]."
+msgstr "Clément Escoffier氏は、この機能改良について非常に包括的なブログ記事を書いており、非常に読み応えがあります。 link:https://quarkus.io/blog/resteasy-reactive-smart-dispatch/[RESTEasy Reactive - To block or not to block]."
 
 #. type: Title ===
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:56
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "MongoDB service binding"
 msgstr "MongoDBサービスバインディング"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:59
-#, fuzzy
 msgid "Service bindings got a new component supported: MongoDB."
 msgstr "サービスバインディングに新しいコンポーネントが追加されました。MongoDBです。"
 
 #. type: Title ===
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:60
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Narayana LRA extension"
-msgstr "ナラヤナLRA延長"
+msgstr "Narayana LRA エクステンション"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:63
-#, fuzzy
 msgid "LRA stands for Long Running Actions and the point of it is to provide APIs for services to coordinate activities."
-msgstr "LRAはLong Running Actionsの略で、活動を調整するためのサービスのAPIを提供することがポイントです。"
+msgstr "LRAはLong Running Actionsの略で、アクティビティを調整するためのサービスのAPIを提供することがポイントです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:65
-#, fuzzy
 msgid "You can learn more about it in link:/blog/using-lra[the dedicated blog post]."
 msgstr "詳しくは link:/blog/using-lra[専用のブログ記事]でご紹介しています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:66
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Full Changelog"
-msgstr "フルチェンジログ"
+msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:69
-#, fuzzy
 msgid "You can get the full changelogs of https://github.com/quarkusio/quarkus/releases/tag/2.2.0.CR1[2.2.0.CR1], https://github.com/quarkusio/quarkus/releases/tag/2.2.0.Final[2.2.0.Final] and https://github.com/quarkusio/quarkus/releases/tag/2.2.1.Final[2.2.1.Final] on GitHub."
 msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.2.0.CR1[2.2.0.CR1]、 link:https://github.com/quarkusio/quarkus/releases/tag/2.2.0.Final[2.2.0.Final]、 link:https://github.com/quarkusio/quarkus/releases/tag/2.2.1.Final[2.2.1.Final]の完全な変更履歴はGitHubでご覧いただけます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:70
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Contributors"
-msgstr "貢献者"
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:74
-#, fuzzy
 msgid "The Quarkus community is growing and has now https://github.com/quarkusio/quarkus/graphs/contributors[533 contributors].  Many many thanks to each and everyone of them."
 msgstr "Quarkusコミュニティは成長を続けており、現在 link:https://github.com/quarkusio/quarkus/graphs/contributors[533名の方にご協力]いただいています。それぞれの方に感謝します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:76
-#, fuzzy
 msgid "In particular for the 2.2 release, thanks to Alexey Loubyansky, Andreas Eberle, Andrej Vano, Andy Damevin, Anze Sodja, asamal, Aykut Bulgu, barreiro, bdevreugd-vialis, Bill Burke, Christoph Kappel, Clement Escoffier, Cyrille Le Clerc, Davide, Dirk Van Haerenborgh, Eduard Tudenhoefner, Erin Schnabel, Falko Modler, Felipe Carvalho dos Anjos Formentin, Foivos Zakkak, Fouad Almalki, Gabriele Cardosi, Galder Zamarreño, Geoffrey De Smet, Georg Leber, George Gastaldi, Georgios Andrianakis, Guillaume Le Floch, Guillaume Smet, Gustavo Luszczynski, hbelmiro, insectengine, Ioannis Canellos, Jaikiran Pai, Jan Martiška, John O'Hara, John Oliver, Jose, Julien Ponge, Katia Aresti, Ken Finnigan, Kjetil Nygård, Kyrylo Shpak, Ladislav Thon, Loïc Mathieu, Luca Molteni, Manyanda Chitimbo, Marc Nuri, Mark McLaughlin, Martin Kouba, Martin Muzikar, Martin Panzer, Matej Novotny, Matthias Cullmann, Michael Musgrove, Michał Szynkiewicz, Ozan Gunalp, Paul Robinson, Phillip Krüger, Raul Valdoleiros, Robert Stupp, Roberto Cortez, Ronald Dehuysser, root, Rostislav Svoboda, Ruggero D'Alò, Sandip Gahlot, Sanne Grinovero, Sergey Beryozkin, Stuart Douglas, Stéphane Épardaud, tarilabs, Tomas Hofman, Willem Jan Glerum, Xavier, Yoann Rodièreand Yubao Liu."
-msgstr "特に、2.2のリリースにあたり、Alexey Loubyansky、Andreas Eberle、Andrej Vano、Andy Damevin、Anze Sodja、asamal、Aykut Bulgu、barreiro、bdevreugd-vialis、Bill Burke、Christoph Kappel、Clement Escoffier、Cyrille Le Clerc、Davide、Dirk Van Haerenborgh、Eduard Tudenhoefner、Erin Schnabel、Falko Modlerに感謝します。フェリペ・カルバルホ・ドス・アンジョス フォルメンティン、フォイヴォス・ザッカク、フアード・アルマルキ、ガブリエレ・カルドシ、ガルダー・ザマリーニョ、ジェフリー・デ・スメット、ゲオルグ・リーバー、ジョージ・ガスタルディ、ゲオルギオス・アンドリアナキス、ギョーム・ル・フロッホ、ギョーム・スメット、グスタボ・ルシュチンスキ、フベルミロ、インセムジン、イオアニス・カネロス、ジャイキラン・パイ、ヤン・マルティシュカ、ジョン・オハラ。John Oliver, Jose, Julien Ponge, Katia Aresti, Ken Finnigan, Kjetil Nygård, Kyrylo Shpak, Ladislav Thon, Loïc Mathieu, Luca Molteni, Manyanda Chitimbo, Marc Nuri, Mark McLaughlin, Martin Kouba, Martin Muzikar, Martin Panzer, Matej Novotny, Matthias Cullmann, Michael Musgrove, Michał Szynkiewicz, Ozan Gunalp,Paul Robinson, Phillip Krüger, Raul Valdoleiros, Robert Stupp, Roberto Cortez, Ronald Dehuysser, root, Rostislav Svoboda, Ruggero D'Alò, Sandip Gahlot, Sanne Grinovero, Sergey Beryozkin, Stuart Douglas, Stéphane Épardaud, tarilabs, Tomas Hofman, Willem Jan Glerum, Xavier, Yoann Rodière and Yubao Liu."
+msgstr "特に、2.2のリリースにあたり、次の方々に感謝いたします: Alexey Loubyansky, Andreas Eberle, Andrej Vano, Andy Damevin, Anze Sodja, asamal, Aykut Bulgu, barreiro, bdevreugd-vialis, Bill Burke, Christoph Kappel, Clement Escoffier, Cyrille Le Clerc, Davide, Dirk Van Haerenborgh, Eduard Tudenhoefner, Erin Schnabel, Falko Modler, Felipe Carvalho dos Anjos Formentin, Foivos Zakkak, Fouad Almalki, Gabriele Cardosi, Galder Zamarreño, Geoffrey De Smet, Georg Leber, George Gastaldi, Georgios Andrianakis, Guillaume Le Floch, Guillaume Smet, Gustavo Luszczynski, hbelmiro, insectengine, Ioannis Canellos, Jaikiran Pai, Jan Martiška, John O'Hara, John Oliver, Jose, Julien Ponge, Katia Aresti, Ken Finnigan, Kjetil Nygård, Kyrylo Shpak, Ladislav Thon, Loïc Mathieu, Luca Molteni, Manyanda Chitimbo, Marc Nuri, Mark McLaughlin, Martin Kouba, Martin Muzikar, Martin Panzer, Matej Novotny, Matthias Cullmann, Michael Musgrove, Michał Szynkiewicz, Ozan Gunalp, Paul Robinson, Phillip Krüger, Raul Valdoleiros, Robert Stupp, Roberto Cortez, Ronald Dehuysser, root, Rostislav Svoboda, Ruggero D'Alò, Sandip Gahlot, Sanne Grinovero, Sergey Beryozkin, Stuart Douglas, Stéphane Épardaud, tarilabs, Tomas Hofman, Willem Jan Glerum, Xavier, Yoann Rodièreand Yubao Liu."
 
 #. type: Title ==
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:77
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Come Join Us"
-msgstr "私たちと一緒に働きませんか？"
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:80
-#, fuzzy
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr "皆様からのフィードバックを大切にしていますので、バグを報告したり、改善を求めたりしてください。"
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:82
-#, fuzzy
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr "Quarkusをお使いの方、または興味のある方は、恥ずかしがらずに私たちの歓迎するコミュニティに参加してください。"
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:84
-#, fuzzy
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr "は、 link:https://github.com/quarkusio/quarkus/issues[GitHub]でフィードバックを行っています。"
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:85
-#, fuzzy
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr "コードを作って link:https://github.com/quarkusio/quarkus/pulls[PRをし]てください。"
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:86
-#, fuzzy
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr "link:https://quarkusio.zulipchat.com/[Zulip]や link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト]で議論することができます。"
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc:86
-#, fuzzy
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr "link:https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]で質問をしてみましょう。"
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
